Dependency injection and more

--- a/Riode-project-backend-P317/Riode.WebUI/Views/Category/details.cshtml
+++ b/Riode-project-backend-P317/Riode.WebUI/Views/Category/details.cshtml
@@ -150,7 +150,7 @@
                                 </figure>
                                 <div class="product-details">
                                     <div class="product-cat">
-                                        <a href="shop-grid-3col.html">@item.Category?.Name</a>
+                                        <a href="shop-grid-3col.html">abc</a>
                                     </div>
                                     <h3 class="product-name">
                                         <a href="product.html">@item.Name</a>
